--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "simplebar-react": "^3.2.1",
+    "validator": "^13.11.0",
     "yup": "1.0.0"
   },
   "devDependencies": {
