--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^5.1.1",
     "@supabase/supabase-js": "^2.32.0",
     "apexcharts": "3.37.0",
+    "bcrypt": "^5.1.0",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
     "next": "13.1.6",
